# developer-dashboard

./: .gitignore  DATA.md  LICENSE  Makefile  PERMISSIONS.md  README.md  SECURITY.md  UI_AND_UX.md  burn_down.py  business_logic.py  constants.py  developers.json  errors.py  index.html  main.py  manage-api-tokens.txt  marshalls.py  models.py  pyproject.toml  script_jira_test.py  tasks.json  velocity.py
.github/workflows/: python-code-ci.yml
business_logic/: __init__.py  _business_logic.py  authentication_business_logic.py  burn_down.py  burn_down_business_logic.py  burn_down_forecast_decimator.py  burn_down_forecastable_task_aggregator.py  burn_down_forecastable_task_getter_proxy.py  burn_down_forecaster.py  business_logic.py  caching_task_getter.py  chart_data_formatter.py  date_classifier.py  date_skipper.py  developer_velocity_business_logic.py  developer_velocity_decimator.py  developer_velocity_tracker.py  dummy_data_task_getter.py  errors.py  marshalls.py  models.py  old_burn_down_tracker.py  test__decimate_burn_down_forecast.py  test__forecast_burn_down_for_task.py  test__track_developer_velocity.py  test__track_team_velocity.py  utils.py  uuid_maker.py  velocity.py  velocity_trackable_task_getter_proxy.py
business_logic/interfaces/: decimator.py  maker.py  task_aggregator.py  task_getter.py
business_logic/models/: burn_down_forecast.py  burn_down_forecastable_task.py  date.py  developer_velocity.py  story_points.py  task.py  velocity_trackable_task.py
business_logic/serializer/: dummy_data_file_de_serializer.py  task.py
domain_models/: task.py
dummy_data/: make_random_tasks.py
server/: __main__.py  api_routers.py  api_v1.py  authentication_utils.py  chart_data_formatter.py  constants.py  envorinment.py  errors.py  page_routers.py  private_html_server.py  public_html_server.py  utils.py
static/: body.css  form.css  index.css  index.html  login.html  register.html  root.css
web_interface/: models.py
web_interface/pages/: make_dashboard_burn_down_page.py  make_dashboard_overview_page.py  make_dashboard_velocity_page.py  make_error_page.py  make_register_page.py  make_sign_in_page.py
web_interface/private/: constants.py  envorinment.py  models.py  types.py  utils.py
web_interface/private/__css_components__/: body.css  flex-box.css
web_interface/private/__data_files__/: foobar-developer-velocity.json  foobar-task-burn-down-metric.json
web_interface/private/__html_templates__/: accordion-item.html  (+35 more)
(+36 files in other folders)
